Finish modal for singlenews & Fix overflow bug on mobile devices & Remove console.logs

--- a/src/components/common/SingleNews/SingleNews.module.scss
+++ b/src/components/common/SingleNews/SingleNews.module.scss
@@ -18,8 +18,8 @@
       align-self: flex-start;
       .postTitle {
         align-self: flex-start;
-        border-bottom: 3px solid $sectionButtonColor;
-        color: $font-color-alt;
+        border-bottom: 3px solid $newsBorderColor;
+        color: $headerColor;
         margin: 0;
         padding: 0;
       }
@@ -88,12 +88,12 @@
   @include flex(column, center, center);
   background-color: $newsModalBackground;
   display: block;
-  height: 100vh;
+  height: 100%;
   left: 0;
-  overflow-y: auto;
+  overflow: hidden;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 9999999999;
   svg,
   svg rect {
@@ -104,7 +104,6 @@
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 50%;
     border: none;
-    color: yellow;
     height: 2rem;
     padding-bottom: 1px;
     position: fixed;
@@ -112,66 +111,66 @@
     top: 2rem;
     width: 2rem;
     z-index: 10;
+    color: $navigationColorLink;
     &:hover {
-      color: blue;
+      color: $navigationColorActiveLink;
     }
   }
   .modalDialog {
-    // height: 90vh;
-    // left: 50%;
-    overflow-y: scroll;
     overflow-y: initial !important;
-    // position: absolute;
-    // top: 50%;
-    // transform: translate(-50%, -50%);
-    // width: 90vw;
     .modalContent {
       @include flex(column, center, space-around);
-      // border: 1px solid blue;
       height: 90vh;
       left: 50%;
       position: absolute;
       top: 50%;
       transform: translate(-50%, -50%);
       width: 50vw;
-      //
       .modalTitle {
+        border-bottom: 1px solid $newsBorderColor;
+        margin-bottom: 1rem;
         width: 100%;
       }
       .modalBody {
         @include flex(column, center, flex-start);
-        width: 100%;
-        // top: 0;
-        overflow-y: auto;
         height: 80vh;
+        overflow-y: auto;
+        width: 100%;
         .modalBodyText {
-          // width: 100%;
-          padding: 2rem 0 2rem 0;
           @include flex(column, center, center);
-
+          margin: 1rem 0 1rem 0;
           img {
-            width: 50%;
             height: auto;
+            width: 80%;
           }
         }
       }
       .modalFooter {
         @include flex(column, flex-end, flex-end);
+        border-top: 1px solid $newsBorderColor;
         width: 100%;
         .modalScrollArrow {
-          @include flex(row, center, center);
-          -moz-animation: flickerAnimation 2s;
-          -o-animation: flickerAnimation 2s;
-          -webkit-animation: flickerAnimation 2s;
-          animation: flickerAnimation 2s;
-          background-color: blue;
-          border-radius: 50%;
+          background: none;
+          border: none;
           bottom: 5rem;
+          color: $navigationColorLink;
+          font-size: 2rem;
           height: 2rem;
-          opacity: 0;
+          opacity: 1;
+          outline: none;
           position: absolute;
           right: 1rem;
+          transition: all 0.5s;
           width: 2rem;
+          &:hover {
+            color: $navigationColorActiveLink;
+          }
+          &__hidden {
+            @extend .modalScrollArrow;
+            animation: none;
+            opacity: 0;
+            transition: all 0.5s;
+          }
         }
       }
     }
@@ -188,6 +187,15 @@
       svg rect {
         stroke-dasharray: 160% 0%;
         stroke-dashoffset: 0;
+      }
+    }
+  }
+  .modal .modalDialog {
+    .modalContent {
+      padding: 1rem 0 1rem 0;
+      width: 85vw;
+      .modalFooter .modalScrollArrow {
+        right: 0;
       }
     }
   }
