--- a/src/components/layout/Sections/Services/Services.module.scss
+++ b/src/components/layout/Sections/Services/Services.module.scss
@@ -11,7 +11,7 @@
     grid-template-columns: repeat(1, 1fr);
     max-width: 1200px;
     padding: 1rem;
-    width: 100%;
+    width: 80%;
     .card {
       color: $white;
       list-style: none;
